# src/anime/dto/anime-response.dto.ts
@@ -200,3 +200,8 @@ export class AnimeReleasesResponse {
   @ApiProperty({ type: AnimeMeta })
   meta!: AnimeMeta;
 }
+
+export class AnimeResponse {
+  @ApiProperty({ type: Anime })
+  data!: Anime;
+}
